==> RT-Thread/rt-thread/bsp/apm32/libraries/Drivers/drv_timer.c <==
#include <board.h>
#define DBG_TAG               "drv.clock_timer"
#define DBG_LVL               DBG_INFO
#include <rtdbg.h>

static void apm32_clock_timer_init(struct rt_clock_timer_device *timer, rt_uint32_t state)
{
#if defined(SOC_SERIES_APM32F0)
    TMR_TimeBase_T   base_config;
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
    TMR_BaseConfig_T base_config;
#endif
    uint32_t prescaler = 0;
    struct apm32_timer *timer_config;

    RT_ASSERT(timer != RT_NULL);

    if (state)
    {
        timer_config = (struct apm32_timer *)timer->parent.user_data;

        apm32_clock_timer_enable_clock();

        prescaler = (uint32_t)(apm32_clock_timer_clock_get(timer_config->tmr) / 10000) - 1;

        base_config.period          = 10000 - 1;
#if defined(SOC_SERIES_APM32F0)
        base_config.div               = prescaler;
        base_config.clockDivision     = TMR_CKD_DIV1;
        if (timer->info->cntmode == CLOCK_TIMER_CNTMODE_UP)
        {
            base_config.counterMode   = TMR_COUNTER_MODE_UP;
        }
        else
        {
            base_config.counterMode   = TMR_COUNTER_MODE_DOWN;
        }
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
        base_config.division        = prescaler;
        base_config.clockDivision   = TMR_CLOCK_DIV_1;
        if (timer->info->cntmode == CLOCK_TIMER_CNTMODE_UP)
        {
            base_config.countMode   = TMR_COUNTER_MODE_UP;
        }
        else
        {
            base_config.countMode   = TMR_COUNTER_MODE_DOWN;
        }
#endif
        base_config.repetitionCounter = 0;
        TMR_ConfigTimeBase(timer_config->tmr, &base_config);

#if defined(SOC_SERIES_APM32F0)
        /* set the TIMx priority */
        NVIC_EnableIRQRequest(timer_config->irqn, 3);
        /* enable update request source */
        TMR_ConfigUPdateRequest(timer_config->tmr, TMR_UPDATE_SOURCE_REGULAR);
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32S1) \
    || defined(SOC_SERIES_APM32F4)
        /* set the TIMx priority */
        NVIC_EnableIRQRequest(timer_config->irqn, 3, 0);
        /* enable update request source */
    #if defined(SOC_SERIES_APM32E1)
        TMR_ConfigUPdateRequest(timer_config->tmr, TMR_UPDATE_SOURCE_REGULAR);
    #else
        TMR_ConfigUpdateRequest(timer_config->tmr, TMR_UPDATE_SOURCE_REGULAR);
    #endif
#endif
        /* clear update flag */
        TMR_ClearStatusFlag(timer_config->tmr, TMR_FLAG_UPDATE);
        LOG_D("%s init success", timer_config->name);
    }
}

static rt_err_t apm32_clock_timer_start(rt_clock_timer_t *timer, rt_uint32_t t, rt_clock_timer_mode_t opmode)
{
    rt_err_t result = RT_EOK;
    struct apm32_timer *timer_config = RT_NULL;

    RT_ASSERT(timer != RT_NULL);

    timer_config = (struct apm32_timer *)timer->parent.user_data;

    /* set timer_config counter */
    timer_config->tmr->CNT = 0;
    /* set timer_config autoReload */
    timer_config->tmr->AUTORLD = t - 1;

    if (opmode == CLOCK_TIMER_MODE_ONESHOT)
    {
        /* set timer to single mode */
        timer_config->tmr->CTRL1_B.SPMEN = 1;
    }
    else
    {
        timer_config->tmr->CTRL1_B.SPMEN = 0;
    }

    TMR_EnableInterrupt(timer_config->tmr, TMR_INT_UPDATE);

#if defined(SOC_SERIES_APM32F0)
    if (timer_config->tmr == TMR1 || timer_config->tmr == TMR2 || timer_config->tmr == TMR3 || \
        timer_config->tmr == TMR15)
#elif defined(SOC_SERIES_APM32S1)
    if (timer_config->tmr == TMR1)
#elif defined(SOC_SERIES_APM32F1) || defined(SOC_SERIES_APM32E1) || defined(SOC_SERIES_APM32F4)
    if (timer_config->tmr == TMR1 || timer_config->tmr == TMR2 || timer_config->tmr == TMR3 || \
        timer_config->tmr == TMR4 || timer_config->tmr == TMR5 || timer_config->tmr == TMR8 || \
        timer_config->tmr == TMR9 || timer_config->tmr == TMR12)
#endif
    {
        if (timer_config->tmr->SMCTRL_B.SMFSEL != 0x06)
        {
            TMR_Enable(timer_config->tmr);
            result = RT_EOK;
        }
    }
    else
    {
        TMR_Enable(timer_config->tmr);
        result = RT_EOK;
    }
    return result;
}

static void apm32_clock_timer_stop(rt_clock_timer_t *timer)
{
    struct apm32_timer *timer_config = RT_NULL;
    RT_ASSERT(timer != RT_NULL);
    timer_config = (struct apm32_timer *)timer->parent.user_data;

    TMR_DisableInterrupt(timer_config->tmr, TMR_INT_UPDATE);
    TMR_Enable(timer_config->tmr);
    timer_config->tmr->CNT = 0;
}

static rt_uint32_t apm32_clock_timer_counter_get(rt_clock_timer_t *timer)
{
    struct apm32_timer *timer_config = RT_NULL;
    RT_ASSERT(timer != RT_NULL);
    timer_config = (struct apm32_timer *)timer->parent.user_data;

    return timer_config->tmr->CNT;
}

static int rt_hw_clock_timer_init(void)
{
    int i = 0;
    int result = RT_EOK;

    for (i = 0; i < sizeof(tmr_config) / sizeof(tmr_config[0]); i++)
    {
        tmr_config[i].device.info = &apm32_timer_info;
        tmr_config[i].device.ops  = &apm32_clock_timer_ops;
        if (rt_clock_timer_register(&tmr_config[i].device, tmr_config[i].name, &tmr_config[i]) == RT_EOK)
        {
            LOG_D("%s register success", tmr_config[i].name);
        }
        else
        {
            LOG_E("%s register failed", tmr_config[i].name);
            result = -RT_ERROR;
        }
    }

    return result;
}
